[package]
name = "jones"
description = "Jones is here to help you not panic!"
version = "0.1.0"
edition = "2024"
authors = [" Andrew Mackenzie andrew@mackenzie-serres.net"]
repository = "https://github.com/andrewdavidmackenzie/jones"
readme = "README.md"
license = "Apache-2.0"

[target.'cfg(target_os = "macos")'.dependencies]
goblin = "0.10.4"

[dev-dependencies]
rand = "0.10.0-rc.7"
